--- a/src/main/resources/META-INF/resources/diamond-layout/css/landing.scss
+++ b/src/main/resources/META-INF/resources/diamond-layout/css/landing.scss
@@ -1,5 +1,5 @@
 @import '../../sass/variables/common';
-@import '../../sass/mixins/_mixins';
+@import '../../sass/layout/_mixins';
 
 /* nunito-regular - latin-ext_latin */
 @font-face {
